crates/core/tests/snapshots/metro_unpack__decompiled_entry.snap
---
source: crates/core/tests/metro_unpack.rs
expression: code
---
import cjs from "./module-200.js";
import defaultValue from "./module-201.js";
import * as namespace from "./module-202.js";
"use strict";
export const result = [
    cjs.label,
    defaultValue,
    namespace.answer
];
export { namespace };
