crates/core/tests/snapshots/metro_unpack__decompiled_module-200.snap
---
source: crates/core/tests/metro_unpack.rs
expression: code
---
export default {
    label: "commonjs"
};
