crates/core/tests/snapshots/metro_unpack__raw_module-200.snap
---
source: crates/core/tests/metro_unpack.rs
expression: code
---
module.exports = {
    label: "commonjs"
};
