crates/core/tests/snapshots/metro_unpack__raw_module-201.snap
---
source: crates/core/tests/metro_unpack.rs
expression: code
---
Object.defineProperty(exports, "__esModule", {
    value: true
});
exports.default = "default-value";
